# marine-probe

./: .gitignore  Cargo.toml  README.md
arduino-sim/: Cargo.toml
arduino-sim/src/: main.rs
backend/: Cargo.toml  fake_probe.py
backend/src/: main.rs
frontend/: Cargo.toml  README.md  index.html  package.json
frontend/src/: lib.rs  main.rs
frontend/src/pages/: home.rs
frontend/style/: output.css
shared/src/: lib.rs
