[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
actix = "0.13.5"
actix-web = "4.11.0"
actix-ws = "0.3.0"
chrono = "0.4.41"
pretty_env_logger = "0.5.0"
rumqttc = "0.24.0"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
thiserror = "2.0.12"
futures-util = "0.3.31"
